packages/pac0/deploy/k8s/deploy_08-transmission-fiscale.yaml
# SPDX-FileCopyrightText: 2026 Philippe ENTZMANN <philippe@entzmann.name>
#
# SPDX-License-Identifier: GPL-3.0-or-later

apiVersion: apps/v1
kind: Deployment
metadata:
  name: 03-controle-formats
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: 03-controle-formats
      app.kubernetes.io/instance: pac0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 03-controle-formats
        app.kubernetes.io/instance: pac0
    spec:

      containers:
        - name: main
          imagePullPolicy: Always
          
          image: astral/uv:python3.12-bookworm-slim
          command: ["uvx"]
          args: ["pac0-cli@latest", "run", "3"]
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "2048Mi"
