packages/pac0/deploy/k8s/deploy_10-stockage.yaml
# SPDX-FileCopyrightText: 2026 Philippe ENTZMANN <philippe@entzmann.name>
#
# SPDX-License-Identifier: GPL-3.0-or-later

apiVersion: apps/v1
kind: Deployment
metadata:
  name: 10-stockage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: 10-stockage
      app.kubernetes.io/instance: pac0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 10-stockage
        app.kubernetes.io/instance: pac0
    spec:

      containers:
        - name: main
          imagePullPolicy: Always
          
          image: astral/uv:python3.12-bookworm-slim
          command: ["uvx"]
          args: ["--refresh", "pac0-cli@latest", "run", "10"]
          resources:
            requests:
              memory: "1024Mi"
            limits:
              memory: "2048Mi"
