packages/pac0/deploy/k8s/deploy_01-api-gateway.yaml
# SPDX-FileCopyrightText: 2026 Philippe ENTZMANN <philippe@entzmann.name>
#
# SPDX-License-Identifier: GPL-3.0-or-later

apiVersion: apps/v1
kind: Deployment
metadata:
  name: "01-api-gateway"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "01-api-gateway"
      app.kubernetes.io/instance: pac0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "01-api-gateway"
        app.kubernetes.io/instance: pac0
    spec:

      containers:
        - name: main
          image: astral/uv:python3.12-bookworm-slim
          imagePullPolicy: Always

          command: ["uvx"]
          args: ["--refresh", "pac0-cli@latest", "run", "1"]
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          #livenessProbe:
          #  httpGet:
          #    path: /healthcheck
          #    port: http
          #  initialDelaySeconds: 20
          #readinessProbe:
          #  httpGet:
          #    path: /healthcheck
          #    port: http
          #  initialDelaySeconds: 30

          resources:
            requests:
              memory: "1024Mi"
            limits:
              memory: "2048Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: s01-api-gateway
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: "01-api-gateway"
    app.kubernetes.io/instance: pac0
