packages/pac0/deploy/k8s/deploy_02-esb-central.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 02-esb-central
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: 02-esb-central
      app.kubernetes.io/instance: pac0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 02-esb-central
        app.kubernetes.io/instance: pac0
    spec:

      containers:
        - name: main
          image: nats:2.12
          #TODO: choose how to persist storage
          args: ["--js"]
          imagePullPolicy: Always
          ports:
            - name: nats
              containerPort: 4222
              protocol: TCP

          #livenessProbe:
          #  httpGet:
          #    path: /healthcheck
          #    port: http
          #  initialDelaySeconds: 5
          #readinessProbe:
          #  httpGet:
          #    path: /healthcheck
          #    port: http
          #  initialDelaySeconds: 10
          resources:
            requests:
              memory: "1024Mi"
            limits:
              memory: "2048Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: 02-esb-central
spec:
  type: ClusterIP
  ports:
    - port: 4222
      targetPort: nats
      protocol: TCP
      name: nats
  selector:
    app.kubernetes.io/name: 02-esb-central
    app.kubernetes.io/instance: pac0
